<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/make_model"
                android:padding="5dp"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="15sp"
                android:id="@+id/carMakeET"
                android:padding="12dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/year_of_manufacture"
                android:padding="5dp"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
            />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="15sp"
                android:id="@+id/carManYrET"
                android:padding="12dp"
            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color"
                android:padding="5dp"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="15sp"
                android:id="@+id/carColorET"
                android:padding="12dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rego"
                android:padding="5dp"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="15sp"
                android:id="@+id/carRegoET"
                android:padding="12dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:padding="5dp"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
            />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="15sp"
                android:id="@+id/carPriceET"
                android:padding="12dp"
            />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/save"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:textAllCaps="false"
                android:layout_gravity="center"
            />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</FrameLayout>